# time-tracker

./: .gitignore  Cargo.toml  PARTNER.md  PRODUCT.md  README.md  SPEC.md  build.rs
.cargo/: config.toml
design/: popover-today-view.brief.md
msix/: AppxManifest.xml  README.md  build-msix.ps1  generate-placeholder-icons.ps1  install.ps1  make-signing-cert.ps1  release-readme.txt  sign-trusted.ps1  trusted-signing-metadata.json
scripts/: regen-msix-assets.sh  regen-tray-icon.sh  test-excel-lock.ps1
src/: Admin.html  Export for billing.html  Recorded time.html  Tray popover.html  autocomplete.rs  config.rs  crash.rs  csv_writer.rs  datefmt.rs  duration.rs  lib.rs  live_view.rs  logging.rs  main.rs  notify.rs  paths.rs  popover_window.rs  popup.rs  single_instance.rs  timer.rs  tray-icon-32.rgba  usage.rs  windows_main.rs  workstream.rs
